<resources>
    <string name="app_name">Learn Kotlin</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result:</string>
    <string name="length">Length</string>
    <string name="cube_calculation">Cube Calculation</string>
    <string name="description_about_me">Description about me</string>
    <string name="about_me">About me</string>
    <string name="my_whatsapp">My WhatsApp</string>
    <string name="catch_and_fill_data">Catch and Fill data</string>
    <string name="fill_data">Fill Data</string>
    <string name="activity_and_intent">Activity and Intent</string>
    <string name="welcome_to_my_first_apk">Welcome to my first APK</string>
    <string name="my_learning_list">My learning list:</string>
    <string name="choose_your_number">Choose your number</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="_300">300</string>
    <string name="_250">250</string>
    <string name="chose_and_back">Chose and Back</string>
    <string name="debugging_and_logging">Debugging and Logging</string>
    <string name="set_value">Set Value</string>
    <string name="view_and_view_group">View and View Group</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="image_content">Image Content</string>
    <string name="lorem_default">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
    </string>
    <string name="copyright_by_verdi">Copyright by Verdi</string>
    <string name="my_article">My Article</string>
    <string name="created_at_26_september_2024">Created at: 26 September 2024</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="content_text">Breaking news: The city of Atlantis has been discovered after centuries of speculation. Archaeologists have confirmed that the mythical underwater city, mentioned by ancient philosophers, is real. The findings have stunned the world and scientists are now working to uncover its secrets.</string>
    <string name="content_specs_display">Breaking headlines\n
    Global discovery news\n
    Archaeology findings</string>
    <string name="content_specs_size">Size of the city: 10.4 x 5.2 miles 16.7 x 8.4 km</string>
    <string name="content_specs_battery">Discovery timeline\n
    Initial discovery: 7 days ago\n
    Exploration duration: ongoing\n
    Research phase: expected to last 2 years\n
    Media coverage: 24/7 worldwide</string>
    <string name="title">Atlantis Discovery</string>
    <string name="specification">Details</string>
    <string name="display">Headlines</string>
    <string name="size">City Size</string>
    <string name="battery">Timeline</string>
    <string name="seller">Reported by</string>
    <string name="my_name">John Doe</string>
    <string name="buy">Read more</string>
    <string name="news_anchor">News Anchor</string>
    <string name="news_anchor_name">Verdiansyah</string>
    <string name="contact_anchor">Contact Anchor</string>
    <string name="style_and_theme">Style and theme</string>
    <string name="style">Style</string>
    <string name="hello_world">Hello World</string>
    <string name="btn_add">Add</string>
    <string name="practice_style_and_theme">Practice style and theme</string>
    <string name="recycler_view">Recycler View</string>

    <string name="heroes_name">Heroes Name</string>
    <string name="description">Description</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="use_library">Use Library</string>
    <string name="view_binding">View Binding</string>
    <string name="practice_view_binding">Practice View Binding</string>
    <string-array name="data_name">
        <item>Ahmad Dahlan</item>
        <item>Ahmad Yani</item>
        <item>Sutomo</item>
        <item>Gatot Soebroto</item>
        <item>Ki Hadjar Dewantara</item>
        <item>Mohammad Hatta</item>
        <item>Soedirman</item>
        <item>Soekarno</item>
        <item>Soepomo</item>
    </string-array>
    <string-array name="data_description">
        <item>An influential cleric and preacher at the Great Mosque of the Sultanate of Yogyakarta at that time. K.H. Ahmad Dahlan’s mother was the daughter of H. Ibrahim, the religious leader of the Sultanate of Ngayogyakarta Hadiningrat at that time. K.H. Ahmad Dahlan pioneered the rise of Muslims to realize their fate as a colonized people who still needed to learn and act.</item>
        <item>General TNI Anumerta Ahmad Yani (also spelled Achmad Yani; born in Purworejo, Central Java, June 19, 1922 – died in Lubang Buaya, Jakarta, October 1, 1965, at the age of 43) was the commander of the Indonesian National Army and was killed by members of the September 30 Movement while attempting to abduct him from his home.</item>
        <item>Sutomo (born in Surabaya, East Java, October 3, 1920 – died in Arafat, Saudi Arabia, October 7, 1981, at the age of 61), better known by the public as Bung Tomo, was a hero famous for his role in raising the spirit of the people to fight the return of the Dutch colonizers through the NICA army, which culminated in the Battle of November 10, 1945, now commemorated as Heroes\' Day.</item>
        <item>General TNI (Purn.) Gatot Soebroto (born in Sumpiuh, Banyumas, Central Java, October 10, 1907 – died in Jakarta, June 11, 1962, at the age of 54) was a military figure in Indonesia\'s struggle for independence and a national hero of Indonesia. He was buried in Ungaran, Semarang district.</item>
        <item>Raden Mas Soewardi Soerjaningrat (EBI: Suwardi Suryaningrat, since 1922 known as Ki Hadjar Dewantara, EBI: Ki Hajar Dewantara, sometimes written in Javanese pronunciation as Ki Hajar Dewantoro; born in Pakualaman, May 2, 1889 – died in Yogyakarta, April 26, 1959, at the age of 69; abbreviated as "Soewardi" or "KHD") was an activist of the Indonesian independence movement, a columnist, politician, and a pioneer of education for indigenous Indonesians during the Dutch colonial period. He was the founder of Taman Siswa school, an educational institution that gave indigenous people the right to education, similar to the rights of the priyayi and Dutch people.</item>
        <item>Dr.(HC) Drs. H. Mohammad Hatta (born with the name Mohammad Athar, known as Bung Hatta; born in Fort de Kock (now Bukittinggi, West Sumatra), the Dutch East Indies, August 12, 1902 – died in Jakarta, March 14, 1980, at the age of 77) was a fighter, statesman, economist, and also Indonesia\'s first Vice President. Together with Soekarno, he played a significant role in liberating Indonesia from Dutch colonial rule and proclaimed its independence on August 17, 1945. He also served as Prime Minister in the Hatta I, Hatta II, and RIS cabinets. He resigned from the vice-presidential position in 1956 due to disagreements with President Soekarno. Hatta is also known as the Father of Indonesian Cooperatives.</item>
        <item>General Sudirman (EYD: Sudirman; born January 24, 1916 – died January 29, 1950, at the age of 34) was an Indonesian military officer during the Indonesian National Revolution. He was the first Commander-in-Chief of the Indonesian National Army and remains widely respected in Indonesia. Born to a commoner family in Purbalingga, the Dutch East Indies, Sudirman was adopted by his uncle, a priyayi. After his family moved to Cilacap in 1916, Sudirman became a diligent student; he was very active in extracurricular activities, including joining the scouting program run by the Islamic organization Muhammadiyah. During middle school, Sudirman began to show his leadership and organizational skills and was respected by the community for his adherence to Islam. After leaving teacher\'s college, in 1936 he started working as a teacher and later became the headmaster at a Muhammadiyah elementary school; he was also active in other Muhammadiyah activities and became the leader of
            the Muhammadiyah Youth Group in 1937. After Japan occupied the Dutch East Indies in 1942, Sudirman continued teaching. In 1944, he joined the Japanese-sponsored Pembela Tanah Air (PETA) army, serving as a battalion commander in Banyumas. While in command, Sudirman and his fellow soldiers staged a rebellion, but he was later exiled to Bogor.</item>
        <item>Dr.(H.C.) Ir. H. Soekarno (ER, EYD: Sukarno, born Koesno Sosrodihardjo) (born in Surabaya, East Java, June 6, 1901 – died in Jakarta, June 21, 1970, at the age of 69) was the first President of the Republic of Indonesia, serving from 1945 to 1967. He played a crucial role in liberating Indonesia from Dutch colonialism. He was the Proclaimer of Indonesia\'s Independence (together with Mohammad Hatta) on August 17, 1945. Soekarno was also the first to introduce the concept of Pancasila as the foundation of Indonesia and named it himself.</item>
        <item>Prof. Mr. Dr. Soepomo (Soewandi Spelling: Supomo; born in Sukoharjo, Central Java, January 22, 1903 – died in Jakarta, September 12, 1958, at the age of 55) was a national hero of Indonesia. Soepomo is known as the architect of the 1945 Constitution, alongside Muhammad Yamin and Soekarno.</item>
    </string-array>
    <integer-array name="data_photo">
        <item>@drawable/ahmad_dahlan</item>
        <item>@drawable/ahmad_yani</item>
        <item>@drawable/bung_tomo</item>
        <item>@drawable/gatot_subroto</item>
        <item>@drawable/ki_hadjar_dewantara</item>
        <item>@drawable/mohammad_hatta</item>
        <item>@drawable/sudirman</item>
        <item>@drawable/sukarno</item>
        <item>@drawable/supomo</item>
    </integer-array>
    <string-array name="url_data_photo">
        <item>https://upload.wikimedia.org/wikipedia/commons/8/87/Ahmad_Dahlan.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/3/3f/Ahmad_Yani.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/e/ed/Bung_Tomo.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/b/be/Col_Gatot_Subroto%2C_Kenang-Kenangan_Pada_Panglima_Besar_Letnan_Djenderal_Soedirman%2C_p27.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/3/3a/Ki_Hadjar_Dewantara_Mimbar_Umum_18_October_1949_p2.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/VP_Hatta.jpg/330px-VP_Hatta.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Sudirman.jpg/486px-Sudirman.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/0/01/Presiden_Sukarno.jpg/330px-Presiden_Sukarno.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/a/a6/Supomo.jpg</item>
        <item>https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/TanMalaka_DariPendjara_ed3.jpg/330px-TanMalaka_DariPendjara_ed3.jpg</item>
    </string-array>
</resources>