<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    android:paddingHorizontal="25dp"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:text="@string/welcome_to_my_first_apk"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/my_learning_list"/>

    <Button
        android:id="@+id/to_activity_and_intent"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_and_intent"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/to_view_and_view_group"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_and_view_group"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/to_style_and_theme"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/style_and_theme"
        android:layout_gravity="center"/>


    <Button
        android:id="@+id/to_recycler_view"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recycler_view"
        android:layout_gravity="center"/>

</LinearLayout>