<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="50dp"
    android:paddingHorizontal="25dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/width"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/width_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/height_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/length"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/length_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:lines="1"/>

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"/>

    <TextView
        android:id="@+id/result_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="24sp"
        android:gravity="center_horizontal" />


</LinearLayout>