<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:paddingVertical="30dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".presentation.view.recycler_view.ActivityRecyclerView">

    <Button
        android:id="@+id/to_recycler_view"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recyclerview"/>

    <Button
        android:id="@+id/to_use_library"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_library"/>

    <Button
        android:id="@+id/to_view_binding"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_binding"/>

    <Button
        android:id="@+id/to_practice_view_binding"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/practice_view_binding"/>

</LinearLayout>