<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.view_and_view_group.ConstraintLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            style="@style/TextContent.BodyMedium.White.MarginAll"
            android:id="@+id/image_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_content"
            android:src="@drawable/sample_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="5dp"
            android:padding="3dp"
            android:text="@string/copyright_by_verdi"
            app:drawableLeftCompat="@drawable/my_logo"
            app:drawableStartCompat="@drawable/my_logo"
            app:layout_constraintBottom_toBottomOf="@+id/image_content"
            app:layout_constraintEnd_toEndOf="@+id/image_content" />

        <TextView
            style="@style/TextContent.TitleMedium.Bold.MarginLeftRight"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_article"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_content"
            tools:ignore="RtlSymmetry" />

        <TextView
            style="@style/TextContent.TitleMedium.Bold.MarginLeftRight"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_at_26_september_2024"
            android:textSize="15sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="30dp"
            android:text="@string/lorem_default"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="798dp" />

        <include
            android:id="@+id/layout_article_specification"
            layout="@layout/article_specification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="23dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0" />

        <include
            layout="@layout/article_news_anchor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_article_specification" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>